Changes are done

--- a/dom.html
+++ b/dom.html
@@ -197,24 +197,43 @@
 
 
    </script>
-   <script>
-      setTimeout(function () {
-         (function (b, o, t, u, p, c) {
-            d = o.createElement('div');
-            d.id = 'app';
-            c = o.getElementsByTagName('head')[0];
-            p = o.createElement('script');
-            p.async = 1;
-            p.id = 'botup';
-            p.src = t + u;
-            p.onload = function () {
-               b._Botup.init('2062983112481786', '2243', 'qa')
-            };
-            o.lastChild.append(d);
-            c.appendChild(p);
-         })(window, document, 'https://nagendra-500.github.io/', 'botupchat.js');
-      }, 2000);
-   </script>
+  
+
+<script>
+
+   setTimeout(function() {
+
+     (function(b, o, t, u, p, c) {
+
+       d = o.createElement("div");
+
+       d.id = "app";
+
+       c = o.getElementsByTagName("head")[0];
+
+       p = o.createElement("script");
+
+       p.async = 1;
+
+       p.id = "botup";
+
+       p.src = t + u;
+
+       p.onload = function() {
+
+         b._Botup.init("521526129067220", "453", "dev");
+
+       };
+
+       o.lastChild.append(d);
+
+       c.appendChild(p);
+
+      })(window, document, 'https://nagendra-500.github.io/', 'botupchat.js');
+
+   }, 2000);
+
+ </script>
 </body>
 
 </html>
