--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-     <script>
+    <script>
     setTimeout(function(){ 
       (function(b, o, t, u, p, c){
     d= o.createElement('div');
@@ -19,11 +19,11 @@
     p.id= 'botup';
   	p.src = t + u;
   	p.onload = function(){
-  		b._Botup.init('1155520161191872', '672', 'dev')
+  		b._Botup.init('729538896836254', '2325', 'qa')
   	};
     o.lastChild.append(d);
   	c.appendChild(p);
-  })(window, document, 'https://widgets.500apps.com/dev/botup/', 'botupchat.js');
+  })(window, document, 'https://widgets.500apps.com/qa/botup/', 'botupchat.js');
   },2000);
     </script>
 
