--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 
   <body>
     <script>
-    setTimeout(function(){ 
+   setTimeout(function(){ 
       (function(b, o, t, u, p, c){
     d= o.createElement('div');
     d.id= 'app';
-  	c = o.getElementsByTagName('head')[0];
-  	p = o.createElement('script');
-  	p.async = 1;
+    c = o.getElementsByTagName('head')[0];
+    p = o.createElement('script');
+    p.async = 1;
     p.id= 'botup';
-  	p.src = t + u;
-  	p.onload = function(){
-  		b._Botup.init('729538896836254', '2325', 'qa')
-  	};
+    p.src = t + u;
+    p.onload = function(){
+      b._Botup.init('1004167621184322', '682', 'dev')
+    };
     o.lastChild.append(d);
-  	c.appendChild(p);
-  })(window, document, 'https://widgets.500apps.com/qa/botup/', 'botupchat.js');
+    c.appendChild(p);
+  })(window, document, 'https://nagendra-500.github.io/', 'dist/botupchat.js');
   },2000);
     </script>
 
