--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <script>
-   setTimeout(function(){ 
+    setTimeout(function(){ 
       (function(b, o, t, u, p, c){
     d= o.createElement('div');
     d.id= 'app';
@@ -23,7 +23,7 @@
     };
     o.lastChild.append(d);
     c.appendChild(p);
-  })(window, document, 'https://nagendra-500.github.io/', 'dist/botupchat.js');
+  })(window, document, 'https://widgets.500apps.com/dev/botup/', 'botupchat.js');
   },2000);
     </script>
 
