--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ninjachat</title>
+    <title>NinjaChat</title>
   </head>
 
   <body>
@@ -23,7 +23,7 @@
     };
     o.lastChild.append(d);
     c.appendChild(p);
-  })(window, document, 'https://widgets.500apps.com/dev/botup/', 'botupchat.js');
+  })(window, document, 'https://nagendra-500.github.io/', 'botupchat.js');
   },2000);
     </script>
 
