--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     setTimeout(function(){ 
       (function(b, o, t, u, p, c){
     d= o.createElement('div');
-    d.id= 'app';
+    d.id= 'botup';
     c = o.getElementsByTagName('head')[0];
     p = o.createElement('script');
     p.async = 1;
-    p.id= 'botup';
+    p.id= 'botup-script';
     p.src = t + u;
     p.onload = function(){
       b._Botup.init('1004167621184322', '682', 'dev')
