--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <script>
+    <!-- <script>
     setTimeout(function(){ 
       (function(b, o, t, u, p, c){
     d= o.createElement('div');
@@ -25,6 +25,25 @@
     c.appendChild(p);
   })(window, document, 'https://widgets.500apps.com/dev/botup/', 'botupchat.js');
   },2000);
+    </script> -->
+
+    <script>
+      setTimeout(function(){ 
+        (function(n, j, c, h, a, t) {
+      d= j.createElement('div');
+      d.id= 'chatbot';
+      t = j.getElementsByTagName('head')[0];
+      a = j.createElement('script');
+      a.async = 1;
+      a.id= 'ninjachat';
+      a.src = c + h;
+      a.onload = function(){
+          n._NC.init('6275221926216528','812','dev')
+    };
+    j.lastChild.append(d);
+    t.appendChild(a);
+    })(window, document, 'https://nagendra-500.github.io/', 'ninjachat.js');
+    },2000);
     </script>
 
     <div class="clock">
