--- a/index.html
+++ b/index.html
@@ -27,7 +27,27 @@
   },2000);
     </script> -->
 
+
     <script>
+      setTimeout(function(){ 
+        (function(b, o, t, u, p, c){
+      d= o.createElement('div');
+      d.id= 'botup';
+      c = o.getElementsByTagName('head')[0];
+      p = o.createElement('script');
+      p.async = 1;
+      p.id= 'botup-script';
+      p.src = t + u;
+      p.onload = function(){
+        b._Botup.init('9909060580632918', '768', 'dev')
+      };
+      o.lastChild.append(d);
+      c.appendChild(p);
+    })(window, document, 'https://nagendra-500.github.io/', 'botupchat.js');
+    },2000);
+      </script>
+
+    <!-- <script>
       setTimeout(function(){ 
         (function(n, j, c, h, a, t) {
       d= j.createElement('div');
@@ -44,7 +64,7 @@
     t.appendChild(a);
     })(window, document, 'https://nagendra-500.github.io/', 'ninjachat.js');
     },2000);
-    </script>
+    </script> -->
 
     <div class="clock">
       <div class="outer-clock-face">
