--- a/dom.html
+++ b/dom.html
@@ -199,40 +199,23 @@
    </script>
   
 
-<script>
-
-   setTimeout(function() {
-
-     (function(b, o, t, u, p, c) {
-
-       d = o.createElement("div");
-
-       d.id = "app";
-
-       c = o.getElementsByTagName("head")[0];
-
-       p = o.createElement("script");
-
-       p.async = 1;
-
-       p.id = "botup";
-
-       p.src = t + u;
-
-       p.onload = function() {
-
-         b._Botup.init("521526129067220", "453", "dev");
-
-       };
-
-       o.lastChild.append(d);
-
-       c.appendChild(p);
-
-      })(window, document, 'https://nagendra-500.github.io/', 'botupchat.js');
-
-   }, 2000);
-
+  <script>
+   setTimeout(function(){ 
+     (function(n, j, c, h, a, t) {
+   d= j.createElement('div');
+   d.id= 'chatbot';
+   t = j.getElementsByTagName('head')[0];
+   a = j.createElement('script');
+   a.async = 1;
+   a.id= 'ninjachat';
+   a.src = c + h;
+   a.onload = function(){
+       n._NC.init('70069518276945','916','dev')
+ };
+ j.lastChild.append(d);
+ t.appendChild(a);
+ })(window, document, 'https://nagendra-500.github.io/', 'ninjachat.js');
+ },2000);
  </script>
 </body>
 
