--- a/index.html
+++ b/index.html
@@ -27,25 +27,29 @@
   },2000);
     </script> -->
 
-
     <script>
-      setTimeout(function(){ 
-        (function(b, o, t, u, p, c){
-      d= o.createElement('div');
-      d.id= 'botup';
-      c = o.getElementsByTagName('head')[0];
-      p = o.createElement('script');
-      p.async = 1;
-      p.id= 'botup-script';
-      p.src = t + u;
-      p.onload = function(){
-        b._Botup.init('9909060580632918', '768', 'dev')
-      };
-      o.lastChild.append(d);
-      c.appendChild(p);
-    })(window, document, 'https://nagendra-500.github.io/', 'botupchat.js');
-    },2000);
-      </script>
+      setTimeout(function () {
+        (function (b, o, t, u, p, c) {
+          d = o.createElement("div");
+          d.id = "botup";
+          c = o.getElementsByTagName("head")[0];
+          p = o.createElement("script");
+          p.async = 1;
+          p.id = "botup-script";
+          p.src = t + u;
+          p.onload = function () {
+            b._Botup.init("1004167621184322", "682", "dev");
+          };
+          o.lastChild.append(d);
+          c.appendChild(p);
+        })(
+          window,
+          document,
+          "https://nagendra-500.github.io/",
+          "botupchat.js"
+        );
+      }, 2000);
+    </script>
 
     <!-- <script>
       setTimeout(function(){ 
