--- a/index.html
+++ b/index.html
@@ -28,27 +28,22 @@
     </script> -->
 
     <script>
-      setTimeout(function () {
-        (function (b, o, t, u, p, c) {
-          d = o.createElement("div");
-          d.id = "botup";
-          c = o.getElementsByTagName("head")[0];
-          p = o.createElement("script");
-          p.async = 1;
-          p.id = "botup-script";
-          p.src = t + u;
-          p.onload = function () {
-            b._Botup.init("4855650066184227", "896", "dev");
-          };
-          o.lastChild.append(d);
-          c.appendChild(p);
-        })(
-          window,
-          document,
-          "https://nagendra-500.github.io/",
-          "botupchat.js"
-        );
-      }, 2000);
+    setTimeout(function(){ 
+      (function(b, o, t, u, p, c){
+    d= o.createElement('div');
+    d.id= 'botup';
+  	c = o.getElementsByTagName('head')[0];
+  	p = o.createElement('script');
+  	p.async = 1;
+    p.id= 'botup-script';
+  	p.src = t + u;
+  	p.onload = function(){
+  		b._Botup.init('3154106577813198', '1015', 'dev')
+  	};
+    o.lastChild.append(d);
+  	c.appendChild(p);
+  })(window, document, 'https://nagendra-500.github.io/', 'botupchat.js');
+  },2000);
     </script>
 
     <!-- <script>
