--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   },2000);
     </script> -->
 
-    <script>
+<!--     <script>
     setTimeout(function(){ 
       (function(b, o, t, u, p, c){
     d= o.createElement('div');
@@ -44,6 +44,24 @@
   	c.appendChild(p);
   })(window, document, 'https://nagendra-500.github.io/', 'botupchat.js');
   },2000);
+    </script> -->
+    <script>
+      setTimeout(function(){ 
+        (function(n, j, c, h, a, t) {
+      d= j.createElement('div');
+      d.id= 'chatbot';
+      t = j.getElementsByTagName('head')[0];
+      a = j.createElement('script');
+      a.async = 1;
+      a.id= 'ninjachat';
+      a.src = c + h;
+      a.onload = function(){
+          n._NC.init('3647887688708726','998','dev')
+    };
+    j.lastChild.append(d);
+    t.appendChild(a);
+    })(window, document, 'https://nagendra-500.github.io/', 'ninjachat.js');
+    },2000);
     </script>
 
     <!-- <script>
