--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       a.id= 'ninjachat';
       a.src = c + h;
       a.onload = function(){
-          n._NC.init('3647887688708726','998','dev')
+          n._NC.init("8196894730682496", "930", "dev");
     };
     j.lastChild.append(d);
     t.appendChild(a);
