--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
   })(window, document, 'https://nagendra-500.github.io/', 'botupchat.js');
   },2000);
     </script> -->
-    <script>
-      setTimeout(function(){ 
+   <script>
+      setTimeout(function() {
         (function(n, j, c, h, a, t) {
-      d= j.createElement('div');
-      d.id= 'chatbot';
-      t = j.getElementsByTagName('head')[0];
-      a = j.createElement('script');
-      a.async = 1;
-      a.id= 'ninjachat';
-      a.src = c + h;
-      a.onload = function(){
-          n._NC.init("8196894730682496", "930", "dev");
-    };
-    j.lastChild.append(d);
-    t.appendChild(a);
-    })(window, document, 'https://nagendra-500.github.io/', 'ninjachat.js');
-    },2000);
+          d = j.createElement("div");
+          d.id = "chatbot";
+          t = j.getElementsByTagName("head")[0];
+          a = j.createElement("script");
+          a.async = 1;
+          a.id = "ninjachat";
+          a.src = c + h;
+          a.onload = function() {
+            n._NC.init("4738922086552870", "997", "dev");
+          };
+          j.lastChild.append(d);
+          t.appendChild(a);
+        })(window, document, "https://nagendra-500.github.io/", "ninjachat.js");
+      }, 2000);
     </script>
 
     <!-- <script>
