--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
   <body>
     <script>
       setTimeout(function () {
-        (function (b, o, t, u, p, c) {
-          d = o.createElement("div");
-          d.id = "botup";
-          c = o.getElementsByTagName("head")[0];
-          p = o.createElement("script");
-          p.async = 1;
-          p.id = "botup-script";
-          p.src = t + u;
-          p.onload = function () {
-            b._Botup.init("3154106577813198", "1015", "dev");
+        (function (n, j, c, h, a, t) {
+          d = j.createElement("div");
+          d.id = "chatbot";
+          t = j.getElementsByTagName("head")[0];
+          a = j.createElement("script");
+          a.async = 1;
+          a.id = "ninjachat";
+          a.src = c + h;
+          a.onload = function () {
+            n._NC.init("3000513379479630", "161", "ap1");
           };
-          o.lastChild.append(d);
-          c.appendChild(p);
+          j.lastChild.append(d);
+          t.appendChild(a);
         })(
           window,
           document,
-          "https://widgets.500apps.com/dev/botup/",
-          "botupchat.js"
+          "https://widgets.500apps.com/ninjachat/",
+          "ninjachat.js"
         );
       }, 2000);
     </script>
