--- a/dom.html
+++ b/dom.html
@@ -197,25 +197,26 @@
 
 
    </script>
-  
- <script>
-    setTimeout(function() {
-      (function(n, j, c, h, a, t) {
-        d = j.createElement("div");
-        d.id = "chatbot";
-        t = j.getElementsByTagName("head")[0];
-        a = j.createElement("script");
-        a.async = 1;
-        a.id = "ninjachat";
-        a.src = c + h;
-        a.onload = function() {
-          n._NC.init("6776067112167001", "1209", "dev");
-        };
-        j.lastChild.append(d);
-        t.appendChild(a);
-      })(window, document, "https://nagendra-500.github.io/", "ninjachat.js");
-    }, 2000);
-  </script>
+
+   <script>
+      setTimeout(function () {
+         (function (n, j, c, h, a, t) {
+            d = j.createElement('div');
+            d.id = 'chatbot';
+            t = j.getElementsByTagName('head')[0];
+            a = j.createElement('script');
+            a.async = 1;
+            a.id = 'ninjachat';
+            a.src = c + h;
+            a.onload = function () {
+               n._NC.init('6179242332714028', '526', 'ap1')
+            };
+            j.lastChild.append(d);
+            t.appendChild(a);
+         })(window, document, '', 'ninjachat.js');
+
+      }, 2000);
+   </script>
 </body>
 
 </html>
