--- a/index.html
+++ b/index.html
@@ -19,16 +19,11 @@
           a.id = "ninjachat";
           a.src = c + h;
           a.onload = function () {
-            n._NC.init("3000513379479630", "161", "ap1");
+            n._NC.init("6776067112167001", "1209", "dev");
           };
           j.lastChild.append(d);
           t.appendChild(a);
-        })(
-          window,
-          document,
-          "https://widgets.500apps.com/ninjachat/",
-          "ninjachat.js"
-        );
+        })(window, document, "", "ninjachat.js");
       }, 2000);
     </script>
     <!-- <script>
