--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
           a.id = "ninjachat";
           a.src = c + h;
           a.onload = function () {
-            n._NC.init("6776067112167001", "1209", "dev");
+            n._NC.init("3000513379479630", "161", "ap1");
           };
           j.lastChild.append(d);
           t.appendChild(a);
-        })(window, document, "", "ninjachat.js");
+        })(
+          window,
+          document,
+          "https://widgets.500apps.com/ninjachat/",
+          "ninjachat.js"
+        );
       }, 2000);
     </script>
     <!-- <script>
