Updated script langauage

--- a/dom.html
+++ b/dom.html
@@ -198,7 +198,7 @@
 
    </script>
 
-   <script>
+   <!-- <script>
       setTimeout(function () {
          (function (n, j, c, h, a, t) {
             d = j.createElement('div');
@@ -216,7 +216,7 @@
          })(window, document, '', 'ninjachat.js');
 
       }, 2000);
-   </script>
+   </script> -->
 </body>
 
 </html>
