--- a/index.html
+++ b/index.html
@@ -8,24 +8,28 @@
   </head>
 
   <body>
-
     <script>
-      setTimeout(function(){ 
-        (function(n, j, c, h, a, t) {
-      d= j.createElement('div');
-      d.id= 'chatbot';
-      t = j.getElementsByTagName('head')[0];
-      a = j.createElement('script');
-      a.async = 1;
-      a.id= 'ninjachat';
-      a.src = c + h;
-      a.onload = function(){
-          n._NC.init('4780052764689413','1404','dev')
-    };
-    j.lastChild.append(d);
-    t.appendChild(a);
-    })(window, document, 'https://nagendra-500.github.io/', 'ninjachat.js');
-    },2000);
+      setTimeout(function () {
+        (function (n, j, c, h, a, t) {
+          d = j.createElement("div");
+          d.id = "chatbot";
+          t = j.getElementsByTagName("head")[0];
+          a = j.createElement("script");
+          a.async = 1;
+          a.id = "ninjachat";
+          a.src = c + h;
+          a.onload = function () {
+            n._NC.init("1657127034624961", "1408", "dev");
+          };
+          j.lastChild.append(d);
+          t.appendChild(a);
+        })(
+          window,
+          document,
+          "https://widgets.500apps.com/dev/ninjachat/",
+          "ninjachat.js"
+        );
+      }, 2000);
     </script>
     <!-- <script>
       setTimeout(function () {
