Updated html file

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
           a.id = "ninjachat";
           a.src = c + h;
           a.onload = function () {
-            n._NC.init("1657127034624961", "1408", "dev");
+            n._NC.init("2859983268816102", "572", "ap1");
           };
           j.lastChild.append(d);
           t.appendChild(a);
         })(
           window,
           document,
-          "https://widgets.500apps.com/dev/ninjachat/",
+          "https://widgets.500apps.com/ninjachat/",
           "ninjachat.js"
         );
       }, 2000);
