--- a/index.html
+++ b/index.html
@@ -8,28 +8,23 @@
   </head>
 
   <body>
-    <script>
-      setTimeout(function () {
-        (function (n, j, c, h, a, t) {
-          d = j.createElement("div");
-          d.id = "chatbot";
-          t = j.getElementsByTagName("head")[0];
-          a = j.createElement("script");
-          a.async = 1;
-          a.id = "ninjachat";
-          a.src = c + h;
-          a.onload = function () {
-            n._NC.init("7566681864704918", "573", "ap1");
-          };
-          j.lastChild.append(d);
-          t.appendChild(a);
-        })(
-          window,
-          document,
-          "https://widgets.500apps.com/ninjachat/",
-          "ninjachat.js"
-        );
-      }, 2000);
+   <script>
+      setTimeout(function(){ 
+        (function(n, j, c, h, a, t) {
+      d= j.createElement('div');
+      d.id= 'chatbot';
+      t = j.getElementsByTagName('head')[0];
+      a = j.createElement('script');
+      a.async = 1;
+      a.id= 'ninjachat';
+      a.src = c + h;
+      a.onload = function(){
+          n._NC.init('1356125176716291','582','ap1')
+    };
+    j.lastChild.append(d);
+    t.appendChild(a);
+    })(window, document, 'https://widgets.500apps.com/ninjachat/', 'ninjachat.js');
+    },2000);
     </script>
     <!-- <script>
       setTimeout(function () {
