--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-   <script>
+  <script>
       setTimeout(function(){ 
         (function(n, j, c, h, a, t) {
       d= j.createElement('div');
@@ -19,11 +19,11 @@
       a.id= 'ninjachat';
       a.src = c + h;
       a.onload = function(){
-          n._NC.init('1356125176716291','582','ap1')
+          n._NC.init('9026019885643922','1418','dev')
     };
     j.lastChild.append(d);
     t.appendChild(a);
-    })(window, document, 'https://widgets.500apps.com/ninjachat/', 'ninjachat.js');
+    })(window, document, 'https://widgets.500apps.com/dev/ninjachat/', 'ninjachat.js');
     },2000);
     </script>
     <!-- <script>
