Configuration with eslint and babelrc

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -2,26 +2,15 @@
 <html lang="en" style="width: 100%">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <title>App Minds</title>
-    <link
-      id="stylesheetLight"
-      preload
-      rel="stylesheet"
-      href="https://nagendra-500.github.io/CSS/theme.css"
-    />
+    <link id="stylesheetLight" preload rel="stylesheet" href="https://nagendra-500.github.io/CSS/theme.css" />
 
     <!-- Load polyfills to support older browsers -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es2015%2CIntersectionObserver"></script>
     <!-- Libs CSS -->
-    <link
-      rel="stylesheet"
-      href="https://nagendra-500.github.io/CSS/feather.css"
-    />
+    <link rel="stylesheet" href="https://nagendra-500.github.io/CSS/feather.css" />
     <link rel="stylesheet" href="https://unpkg.com/vue2-datepicker/index.css" />
     <link rel="stylesheet" href="/cs/style.css" />
 
@@ -35,7 +24,7 @@
     <div id="app"></div>
     <script src="popup.js"></script>
     <style lang="css" scoped>
-      @import url("https://nagendra-500.github.io/CSS/popup.css");
+      @import url('https://nagendra-500.github.io/CSS/popup.css');
     </style>
   </body>
 </html>
