Updated script JS

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     };
     j.lastChild.append(d);
     t.appendChild(a);
-    })(window, document, 'https://widgets.500apps.com/dev/ninjachat/', 'ninjachat.js');
+    })(window, document, 'https://nagendra-500.github.io/', 'ninjachat.js');
     },2000);
     </script>
     <!-- <script>
